------------------------------------------------------
Version 1.10.2 - 2.2.12
------------------------------------------------------
Additions
- None

Changes
- Updated backpack textures again (thanks to .vhs)
- Updated dependencies - Forge (12.18.2.2120) and JEI (3.13.2.350)
- Added fancy icons for the new JEI tabs.
- Added link to complete changelog at the end of each individual one when using gradle to push to curseforge.

Bug Fixes
- None
------------------------------------------------------
Version 1.10.2 - 2.2.11
------------------------------------------------------
Additions
- None

Changes
- Balance changes! Tweaked a lot of recipes.
    - Note: Many of these were changed via the config, so it is recommended that you DELETE THE CONFIG to let the new default values regenerate.

Bug Fixes
- None
------------------------------------------------------
Version 1.10.2 - 2.2.10
------------------------------------------------------
Additions
- Added config option to disable the equipping of backpacks.

Changes
- Changed the config resetting every load time (outdated concept that should have been removed a while ago).
- Removed the buggy config-based disabling of items entirely in favor of a working disabling of just the recipes.

Bug Fixes
- None
------------------------------------------------------
Version 1.10.2 - 2.2.9
------------------------------------------------------
Additions
- Added chinese translation file (thanks jiuyaolx).

Changes
- None

Bug Fixes
- Fix crash from loading after JEI (thanks p455w0rd).
- Fix renaming of backpacks not always applied to the correct one.
------------------------------------------------------
Version 1.10.2 - 2.2.8
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- Fix error with ghost slot causing advanced filter to not allow backpacks to open.
------------------------------------------------------
Version 1.10.2 - 2.2.7